# pytest-language-server

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BUGFIX.md  BUGFIX2.md  Cargo.toml  PERFORMANCE_ANALYSIS.md  README.md  bump-version.sh  demo.tape  deny.toml  pyproject.toml  test_parser_api.rs
.github/workflows/: ci.yml  release.yml  security.yml
Formula/: pytest-language-server.rb
extensions/intellij-plugin/: build.gradle.kts  build.sh  settings.gradle.kts
extensions/vscode-extension/: .vscodeignore  package-lock.json  package.json
extensions/zed-extension/: Cargo.toml  README.md  TODO.md  extension.toml
extensions/zed-extension/src/: lib.rs
src/: fixtures.rs  lib.rs  main.rs
src/fixtures/: analyzer.rs  cli.rs  decorators.rs  imports.rs  mod.rs  resolver.rs  scanner.rs  types.rs  undeclared.rs
src/providers/: code_action.rs  code_lens.rs  diagnostics.rs  document_symbol.rs  mod.rs  workspace_symbol.rs
test_project/: conftest.py  test_example.py
tests/: test_decorators.rs  test_e2e.rs  test_fixtures.rs  test_lsp.rs  test_lsp_performance.rs
tests/snapshots/: test_e2e__cli_fixtures_list_full.snap  test_e2e__cli_fixtures_list_skip_unused.snap
tests/test_project/: conftest.py
tests/test_project/subdir/: conftest.py
zed-extension/: Cargo.toml  PUBLISHING.md  README.md  TODO.md  TROUBLESHOOTING.md  extension.toml
zed-extension/src/: lib.rs
