[package]
name = "pytest-language-server"
version = "0.8.0"
edition = "2021"
rust-version = "1.89"
authors = ["Thiago Bellini Ribeiro <hackedbellini@gmail.com>"]
license = "MIT"
description = "A blazingly fast Language Server Protocol implementation for pytest"
repository = "https://github.com/bellini666/pytest-language-server"
keywords = ["pytest", "lsp", "language-server", "testing"]
categories = ["development-tools", "development-tools::testing"]

[[bin]]
name = "pytest-language-server"
path = "src/main.rs"

[lib]
name = "pytest_language_server"
path = "src/lib.rs"

[dependencies]
tower-lsp = "0.20.0"
tokio = { version = "1.48", features = ["full"] }
serde_json = "1.0"
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.5" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.5" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.5" }
walkdir = "2.5"
dashmap = "6.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
