[package]
name = "pytest-language-server"
version = "0.8.2"
edition = "2021"
rust-version = "1.83"
authors = ["Thiago Bellini Ribeiro <hackedbellini@gmail.com>"]
license = "MIT"
description = "A blazingly fast Language Server Protocol implementation for pytest"
repository = "https://github.com/bellini666/pytest-language-server"
keywords = ["pytest", "lsp", "language-server", "testing"]
categories = ["development-tools", "development-tools::testing"]

[[bin]]
name = "pytest-language-server"
path = "src/main.rs"

[lib]
name = "pytest_language_server"
path = "src/lib.rs"

[dependencies]
tower-lsp = "0.20.0"
tokio = { version = "1.48", features = ["full"] }
serde_json = "1.0"
rustpython-parser = "0.4.0"
walkdir = "2.5"
dashmap = "6.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
