[package]
name = "zed-pytest-lsp"
version = "0.10.0"
edition = "2021"
authors = ["Thiago Bellini Ribeiro <hackedbellini@gmail.com>"]
repository = "https://github.com/bellini666/pytest-language-server"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"
